loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: '(' expected but identifier found.
while (!sortieTrouvee) {for x<- 1 to 5 {                                        avance()
                            ^Poucet1:4: error: illegal start of simple expression
                                        gauche()};
                                                 ^